apps/istio/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-operator
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - local.k8s.janpuc.com
    - '*.local.k8s.janpuc.com'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - local.k8s.janpuc.com
    - '*.local.k8s.janpuc.com'
    port:
      name: https
      number: 443
      protocol: HTTPS
    # tls:
    #   mode: SIMPLE
    #   credentialName: istio-certs
